--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p>In our Digital Inclusion course, we have discussed how the internet and technology are essential for everyday life. However, not everyone has equal access to these resources. Public and college libraries help close this gap by providing free access to computers, the internet, and training programs.
             During Week 3, we learned about the role libraries played when many were closed during the pandemic, showing just how important they are to people who need these resources. For my project, I will explore how libraries contribute to digital inclusion, 
             especially by offering technology access and teaching digital skills. I will also look into the challenges libraries face, such as limited funding and outdated technology. 
-            My research will highlight why libraries are crucial for digital inclusion and the issues they must overcome to support their communities..</p>
+            My research will highlight why libraries are crucial for digital inclusion and the issues they must overcome to support their communities.</p>
     </section>
 
     <section id="challenges">
