--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <li>Public computer terminals for those without access at home</li>
             <li>Support for research and homework through online databases and digital archives</li>
         </ul>
-        <p>At Washington State University and the Pullman Public Library, resources such as loanable laptops and study rooms with internet access provide students with the tools needed to succeed in their academic and personal endeavors.</p>
+        <p>At WSU and the Pullman Public Library, resources such as public computers and study rooms with internet access provide students with the tools needed to succeed in their academic and personal endeavors.</p>
     </section>
 
     <section id="infographic">
