--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <section id="resources">
         <h2>Library Resources for Digital Inclusion</h2>
-        <p>Libraries offer a wide range of resources to support digital inclusion, including:</p>
+        <p>Libraries can offer a wide range of resources to support digital inclusion, including:</p>
         <ul>
             <li>Free internet access for library patrons</li>
             <li>Digital literacy workshops and training sessions</li>
