--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Digital Inclusion Project</p>
+        <p> Zack Smith - DTC206 - 2024 </p>
     </footer>
 </body>
 </html>
